--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.1",
+    "react-native-camera": "^2.0.2",
+    "react-native-gesture-handler": "^1.1.0",
     "react-native-linear-gradient": "^2.5.3",
-    "react-native-local-resource": "^0.1.3"
+    "react-native-local-resource": "^0.1.3",
+    "react-navigation": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
@@ -18,6 +21,7 @@
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.8",
     "@types/react-native": "^0.57.40",
+    "@types/react-navigation": "^3.0.5",
     "@types/react-test-renderer": "^16.8.1",
     "babel-jest": "^24.5.0",
     "jest": "^24.5.0",
